Replaced deprecated constructors.